tests/resource/invalid/type/class/access_private_field.mamba
class MyClass
    def private my_field: Int := 10


def my_class := MyClass()
print my_class.my_field
